k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: communities-platform-frontend-ingress
  namespace: communities-platform-argo
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: communities-platform-tls
      # no hosts here means the cert is just attached; hostname won't be strictly enforced
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: communities-platform-frontend
                port:
                  number: 80
